[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/gotoggl/keygen.gd" type="Script" id=1]

[node name="hbox" type="HBoxContainer"]
anchor_left = 0.365723
anchor_top = 0.2925
anchor_right = 0.634277
anchor_bottom = 0.7075
margin_right = 25.0
margin_bottom = 1.0
grow_horizontal = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="windialog" type="WindowDialog" parent="."]
visible = true
margin_right = 300.0
margin_bottom = 250.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 5
size_flags_vertical = 5
popup_exclusive = true
window_title = "GoToggl Account Setup"

[node name="vbox" type="VBoxContainer" parent="windialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 15.0
margin_right = -5.0
margin_bottom = -5.0
grow_horizontal = 0
size_flags_horizontal = 5
size_flags_vertical = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="l_api" type="RichTextLabel" parent="windialog/vbox"]
margin_right = 290.0
margin_bottom = 15.0
grow_horizontal = 0
size_flags_horizontal = 5
size_flags_vertical = 5
text = "  API Key"
fit_content_height = true

[node name="t_api" type="TextEdit" parent="windialog/vbox"]
margin_top = 19.0
margin_right = 290.0
margin_bottom = 44.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 25 )

[node name="l_workspace" type="RichTextLabel" parent="windialog/vbox"]
margin_top = 48.0
margin_right = 290.0
margin_bottom = 63.0
grow_horizontal = 0
size_flags_horizontal = 5
size_flags_vertical = 5
text = "  Workspace ID"
fit_content_height = true

[node name="t_workspace" type="TextEdit" parent="windialog/vbox"]
margin_top = 67.0
margin_right = 290.0
margin_bottom = 92.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 25 )

[node name="l_project" type="RichTextLabel" parent="windialog/vbox"]
margin_top = 96.0
margin_right = 290.0
margin_bottom = 111.0
grow_horizontal = 0
size_flags_horizontal = 5
size_flags_vertical = 5
text = "  Project ID"
fit_content_height = true

[node name="t_project" type="TextEdit" parent="windialog/vbox"]
margin_top = 115.0
margin_right = 290.0
margin_bottom = 140.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 25 )

[node name="l_description" type="RichTextLabel" parent="windialog/vbox"]
margin_top = 144.0
margin_right = 290.0
margin_bottom = 159.0
grow_horizontal = 0
size_flags_horizontal = 5
size_flags_vertical = 5
text = "  Description"
fit_content_height = true

[node name="t_description" type="TextEdit" parent="windialog/vbox"]
margin_top = 163.0
margin_right = 290.0
margin_bottom = 188.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 25 )

[node name="spacer" type="Control" parent="windialog/vbox"]
margin_top = 192.0
margin_right = 290.0
margin_bottom = 206.0
size_flags_horizontal = 5
size_flags_vertical = 3

[node name="b_confirm" type="Button" parent="windialog/vbox"]
margin_top = 210.0
margin_right = 290.0
margin_bottom = 230.0
grow_horizontal = 0
text = "Confirm"
